--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,41 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Ibrahim Gaber - FullStack Web Developer proficient in MERN stack, Next.js, and Nest.js."
     />
+    <meta name="author" content="Ibrahim Gaber" />
+    <meta
+      name="keywords"
+      content="web development, MERN stack, Next.js, Nest.js, FullStack"
+    />
+    <meta
+      property="og:title"
+      content="Ibrahim Gaber - FullStack Web Developer"
+    />
+    <meta
+      property="og:description"
+      content="Experienced FullStack Web Developer skilled in MERN stack, Next.js, and Nest.js."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="./icons/og-image.jpg" />
+    <meta property="og:url" content="https://ibrahimgaber.onrender.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@yourtwitterhandle" />
+    <meta
+      name="twitter:title"
+      content="Ibrahim Gaber - FullStack Web Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Experienced FullStack Web Developer skilled in MERN stack, Next.js, and Nest.js."
+    />
+    <meta name="twitter:image" content="./icons/twitter-image.jpg" />
+    <title>Ibrahim Gaber - FullStack Web Developer</title>
     <link rel="apple-touch-icon" href="./icons/apple-touch-icon.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <title>Ibrahim Gaber</title>
+    <!-- Add your webfonts, analytics, or other meta tags here -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    --> 
   </body>
 </html>
