added Angular to my skills, and an angular project.

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ibrahim Gaber - FullStack Web Developer proficient in MERN stack, Next.js, and Nest.js."
+      content="Ibrahim Gaber - FullStack Web Developer proficient in MEARN stack, Next.js, and Nest.js."
     />
     <meta name="author" content="Ibrahim Gaber" />
     <meta
       name="keywords"
-      content="web development, MERN stack, Next.js, Nest.js, FullStack"
+      content="web development, MEARN stack, Next.js, Nest.js, FullStack"
     />
     <meta
       property="og:title"
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:description"
-      content="Experienced FullStack Web Developer skilled in MERN stack, Next.js, and Nest.js."
+      content="Experienced FullStack Web Developer skilled in MEARN stack, Next.js, and Nest.js."
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./icons/og-image.jpg" />
@@ -33,7 +33,7 @@
     />
     <meta
       name="twitter:description"
-      content="Experienced FullStack Web Developer skilled in MERN stack, Next.js, and Nest.js."
+      content="Experienced FullStack Web Developer skilled in MEARN stack, Next.js, and Nest.js."
     />
     <meta name="twitter:image" content="./icons/twitter-image.jpg" />
     <title>Ibrahim Gaber - FullStack Web Developer</title>
